# findimg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: button.rs  img_scrape.rs  list.rs  main.rs
src/img_scrape/: google_photos.rs  mod.rs
src/ui/: button.rs  list.rs  message.rs  mod.rs
