[package]
name = "findimg"
version = "0.1.0"
edition = "2024"

[dependencies]
clipers = { git = "https://github.com/FoxMoss/clippers", version = "0.1.4" }
crossterm = "0.29"
image = "0.25"
ratatui = "0.30"
ratatui-image = "10.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }