[package]
name = "findimg"
version = "0.1.0"
edition = "2024"

[dependencies]
cliprs = { git = "https://github.com/FoxMoss/clippers", version = "0.2.0" }
crossterm = "0.29"
image = "0.25"
ratatui = "0.30"
ratatui-image = "10.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = {version = "1.0.228",  features = ["derive"] }
serde_json = "1.0.149"
nano-vectordb-rs = "0.1.*"